--- a/.github/workflows/n1img.yml
+++ b/.github/workflows/n1img.yml
@@ -52,7 +52,9 @@ jobs:
         
         sudo chmod  -R 777 /opt
         cp -r ${FLIPPY_NAME}/opt/* /opt
-        
+
+        mkdir -p dl
+
         cd /opt
         mkdir imgs
         
