--- a/.github/workflows/n1img.yml
+++ b/.github/workflows/n1img.yml
@@ -53,22 +53,19 @@ jobs:
         sudo chmod  -R 777 /opt
         cp -r ${FLIPPY_NAME}/opt/* /opt
 
-        mkdir -p dl
-
         cd /opt
         mkdir imgs
         
     - uses: actions/cache@v2
       id: opwenwrtcache
       with:
-        path: dl
+        path: ~/cache
         key: ${{ runner.os }}- opwenwrt-${{ env.FLIPPY_NAME }}-${{ hashFiles('**/openwrt-armvirt-64-default-rootfs.tar.gz') }}
    
     - name: Download
       if: steps.opwenwrtcache.outputs.cache-hit != 'true'
       run: |
-        mkdir -p dl
-        cd dl
+        cd ~/cache
         version=$(curl -s "https://api.github.com/repos/mingxiaoyu/N1Openwrt/releases/latest" | awk -F '"' '/tag_name/{print $4}')
         wget  https://github.com/mingxiaoyu/N1Openwrt/releases/download/$version/openwrt-armvirt-64-default-rootfs.tar.gz
 
@@ -87,8 +84,8 @@ jobs:
 
     - name: Copy files
       run: |
-        mv dl/openwrt-armvirt-64-default-rootfs.tar.gz /opt/openwrt/openwrt-armvirt-64-default-rootfs.tar.gz
-        mv dl/$FLIPPY_FILENAME /opt/imgs/$FLIPPY_FILENAME
+        mv ~/cache/openwrt-armvirt-64-default-rootfs.tar.gz /opt/openwrt/openwrt-armvirt-64-default-rootfs.tar.gz
+        mv ~/cache/$FLIPPY_FILENAME /opt/imgs/$FLIPPY_FILENAME
               
     - name: build img
       run: |
