--- a/.github/workflows/n1img.yml
+++ b/.github/workflows/n1img.yml
@@ -56,7 +56,7 @@ jobs:
         sudo chmod  -R 777 /opt
         cp -r ${FLIPPY_NAME}/opt/* /opt
         
-        test -d ~/.cache || mkdir -p ~/.cache
+        test -d dl || mkdir -p dl
         
         cd /opt
         mkdir imgs
@@ -64,13 +64,13 @@ jobs:
     - uses: actions/cache@v2
       id: opwenwrtcache
       with:
-        path: ~/.cache
-        key: ${{ runner.os }}- opwenwrt-${{ env.FLIPPY_NAME }}-${{ env.version }}
+        path: dl
+        key: ${{ runner.os }}-opwenwrt-${{ env.FLIPPY_NAME }}-${{ env.version }}
    
     - name: Download
       if: steps.opwenwrtcache.outputs.cache-hit != 'true'
       run: |
-        cd ~/.cache
+        cd dl
         
         wget  https://github.com/mingxiaoyu/N1Openwrt/releases/download/$version/openwrt-armvirt-64-default-rootfs.tar.gz
 
@@ -80,7 +80,7 @@ jobs:
     
     - name: Check Files
       run: |
-        cd ~/.cache
+        cd dl
         ls
         
     - name: Install the package
@@ -94,8 +94,8 @@ jobs:
 
     - name: Copy files
       run: |
-        mv ~/.cache/openwrt-armvirt-64-default-rootfs.tar.gz /opt/openwrt/openwrt-armvirt-64-default-rootfs.tar.gz
-        mv ~/.cache/$FLIPPY_FILENAME /opt/imgs/$FLIPPY_FILENAME
+        mv dl/openwrt-armvirt-64-default-rootfs.tar.gz /opt/openwrt/openwrt-armvirt-64-default-rootfs.tar.gz
+        mv dl/$FLIPPY_FILENAME /opt/imgs/$FLIPPY_FILENAME
               
     - name: build img
       run: |
