--- a/.github/workflows/n1img.yml
+++ b/.github/workflows/n1img.yml
@@ -51,7 +51,6 @@ jobs:
         
         echo "version=$version"  >> $GITHUB_ENV
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")"  >> $GITHUB_ENV
-        echo "tag_name=$(date +%Y%m%d)"  >> $GITHUB_ENV
         
         sudo chmod  -R 777 /opt
         cp -r ${FLIPPY_NAME}/opt/* /opt
@@ -125,7 +124,7 @@ jobs:
       with:
         name: ${{ env.DATE }} 🚀 / N1-Openwrt-img | 编译
         allowUpdates: true
-        tag: ${{ env.tag_name }}
+        tag: ${{ env.version }}
         commit: main
         token: ${{ secrets.GITHUB_TOKEN   }}
         body: |
