--- a/.github/workflows/n1img.yml
+++ b/.github/workflows/n1img.yml
@@ -55,7 +55,8 @@ jobs:
         sudo chmod  -R 777 /opt
         cp -r ${FLIPPY_NAME}/opt/* /opt
         
-        test -d dl || mkdir -p dl
+        test -d /opt/dl || mkdir -p /opt/dl
+        sudo chmod  -R 777 /opt/dl
         
         cd /opt
         mkdir imgs
@@ -63,15 +64,14 @@ jobs:
     - uses: actions/cache@v2
       id: opwenwrtcache
       with:
-        path: dl
+        path: |
+          /opt/dl
         key: ${{ runner.os }}-opwenwrt-${{ env.FLIPPY_NAME }}-${{ env.version }}
-        restore-keys: |
-            ${{ runner.os }}-opwenwrt-${{ env.FLIPPY_NAME }}
             
     - name: Download
       if: steps.opwenwrtcache.outputs.cache-hit != 'true'
       run: |
-        cd dl
+        cd /opt/dl
         
         wget  https://github.com/mingxiaoyu/N1Openwrt/releases/download/$version/openwrt-armvirt-64-default-rootfs.tar.gz
 
@@ -81,9 +81,9 @@ jobs:
     
     - name: Check Files
       run: |
-        cd dl
+        cd /opt/dl
         ls
-        
+                
     - name: Install the package
       run: |
         sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
@@ -95,8 +95,8 @@ jobs:
 
     - name: Copy files
       run: |
-        mv dl/openwrt-armvirt-64-default-rootfs.tar.gz /opt/openwrt/openwrt-armvirt-64-default-rootfs.tar.gz
-        mv dl/$FLIPPY_FILENAME /opt/imgs/$FLIPPY_FILENAME
+        mv /opt/dl/openwrt-armvirt-64-default-rootfs.tar.gz /opt/openwrt/openwrt-armvirt-64-default-rootfs.tar.gz
+        mv /opt/dl/$FLIPPY_FILENAME /opt/imgs/$FLIPPY_FILENAME
               
     - name: build img
       run: |
