--- a/.github/workflows/n1img.yml
+++ b/.github/workflows/n1img.yml
@@ -67,6 +67,8 @@ jobs:
         path: |
           /opt/dl
         key: ${{ runner.os }}-opwenwrt-${{ env.FLIPPY_NAME }}-${{ env.version }}-${{ hashFiles('**/openwrt-armvirt-64-default-rootfs.tar.gz') }}
+        restore-keys: |
+          ${{ runner.os }}-opwenwrt-${{ env.FLIPPY_NAME }}-${{ env.version }}-
             
     - name: Download
       if: steps.opwenwrtcache.outputs.cache-hit != 'true'
