--- a/.github/workflows/n1img.yml
+++ b/.github/workflows/n1img.yml
@@ -66,7 +66,7 @@ jobs:
       with:
         path: |
           /opt/dl/openwrt-armvirt-64-default-rootfs.tar.gz
-          /opt/dl/${{ FLIPPY_FILENAME }}
+          /opt/dl/${{ env.FLIPPY_FILENAME }}
         key: ${{ runner.os }}-opwenwrt-${{ env.FLIPPY_NAME }}-${{ env.version }}-${{ hashFiles('**/openwrt-armvirt-64-default-rootfs.tar.gz') }}
         restore-keys: |
           ${{ runner.os }}-opwenwrt-${{ env.FLIPPY_NAME }}-${{ env.version }}-
