--- a/.github/workflows/n1img.yml
+++ b/.github/workflows/n1img.yml
@@ -43,8 +43,10 @@ jobs:
       run: |     
         if [[ $flippy_name = "38" ]]; 
         then
+          echo "set the flippy 38+o"
           echo "FLIPPY_FILEID=${{ secrets.FLIPPY_38_FILEID }}"  >> $GITHUB_ENV
         else
+          echo "set the flippy 49+o"
           echo "FLIPPY_FILEID=${{ secrets.FLIPPY_49_FILEID }}"  >> $GITHUB_ENV
         fi
         version=$(curl -s "https://api.github.com/repos/mingxiaoyu/N1Openwrt/releases/latest" | awk -F '"' '/tag_name/{print $4}')
