--- a/.github/workflows/buildn1img.yml
+++ b/.github/workflows/buildn1img.yml
@@ -13,7 +13,7 @@ on:
         default: 3
       
 env:
-  RELEASE: false
+  RELEASE: true
   FLIPPY_VERSION: 57
  
 jobs:
@@ -23,8 +23,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@main
-      with:
-        ref: 57
+      #with:
+      #  ref: 57
         
     - name: Initialization environment
       run: |     
