--- a/.github/workflows/buildn1img.yml
+++ b/.github/workflows/buildn1img.yml
@@ -1,15 +1,16 @@
 name: Build N1 IMG
 
 on:
+  repository_dispatch:
   workflow_dispatch:
     inputs:
       days:
         description: 'Number of days.'
-        required: true
+        required: false
         default: 30
       minimum_runs:
         description: 'The minimum runs to keep for each workflow.'
-        required: true
+        required: false
         default: 3
       
 env:
