--- a/opt/openwrt/make.env
+++ b/opt/openwrt/make.env
@@ -2,7 +2,8 @@
 WHOAMI=mingxiaoyu
 
 OPENWRT_VER="R21.4.18"
-KERNEL_VERSION="5.4.113-flippy-57+o"
+KERNEL_VERSION="5.4.114-flippy-58+o"
+#KERNEL_VERSION="5.10.32-flippy-58+"
 
 KERNEL_PKG_HOME="/opt/kernel"
 
